dist/1.0/bin/sample/retrieveUnpackaged/objects/CProduct__c.object
<CustomObject>
    <description>Custom Product object</description>
    <fields>
        <fullName>Attribute_Set_Type__c</fullName>
        <description>Relation to Attribute Set Type used to send attribute values to billing</description>
        <inlineHelpText>Relation to Attribute Set Type used to send attribute values to billing</inlineHelpText>
        <label>Attribute Set Type</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Bundles (Attribute Set Type)</relationshipLabel>
        <relationshipName>CProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BCT_Product_Int__c</fullName>
        <description>ID of this Bundle in BCT for International bundles</description>
        <inlineHelpText>ID of this Bundle in BCT for International bundles (used in automatic calculation creation process; in case there is no international Product in BCT it can be empty)</inlineHelpText>
        <label>BCT Product Id (International)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCT_Product__c</fullName>
        <description>ID of this Bundle in BCT</description>
        <inlineHelpText>ID of this Bundle in BCT (used in automatic calculation creation process)</inlineHelpText>
        <label>BCT Product Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Product_Family__c</fullName>
        <description>Product Family from related Main Product.</description>
        <formula>TEXT( Product__r.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Family from related Main Product.</inlineHelpText>
        <label>Bundle Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Type__c</fullName>
        <description>PRISRAII-41 Field treated as flag for distinguishing Bundles of special types, like Super Bundle</description>
        <inlineHelpText>Field treated as flag for distinguishing Bundles of special types, like Super Bundle</inlineHelpText>
        <label>Bundle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Super Bundle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CBCT_Product__c</fullName>
        <description>Name of Product visible in CBCT</description>
        <inlineHelpText>Name of Product visible in CBCT</inlineHelpText>
        <label>CBCT Product</label>
        <picklist>
            <picklistValues>
                <fullName>nll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dwdm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ip_ll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ipvpn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iptransit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>colo_host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nll_eth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ip_ll_eth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel Calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lambda</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <description>Indicates what type of price Calculation should be used for this Bundle</description>
        <inlineHelpText>Indicates what type of price Calculation should be used for this Bundle</inlineHelpText>
        <label>Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel Calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCT or Price List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration_Frozen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if configuration pages should be accessible for this Bundle</description>
        <inlineHelpText>Indicates if configuration pages should be accessible for this Bundle</inlineHelpText>
        <label>Configuration Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_Extranet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Extranet system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Extranet system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Extranet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Risk__c</fullName>
        <description>Indicates what is the Credit Risk for given Bundle [PL specific]</description>
        <inlineHelpText>Indicates what is the Credit Risk for given Bundle [PL specific]</inlineHelpText>
        <label>Credit Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Bundle</description>
        <inlineHelpText>Description of the Bundle</inlineHelpText>
        <label>Product Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dimension_Dictionary__c</fullName>
        <description>Relation to Dimension Dictionary used in SK Billing.</description>
        <inlineHelpText>Relation to Dimension Dictionary used in SK Billing.</inlineHelpText>
        <label>Dimension Dictionary</label>
        <referenceTo>Dimension_Dictionary__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>CProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extranet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected then it means that it can be added to Service Menu under Partner Accounts</description>
        <inlineHelpText>If selected then it means that it can be added to Service Menu under Partner Accounts</inlineHelpText>
        <label>Extranet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <description>Assigned Product Family</description>
        <inlineHelpText>Assigned Product Family</inlineHelpText>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Data Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>Validity date from which Bundle can be sold.</description>
        <inlineHelpText>Validity date from which Bundle can be sold.</inlineHelpText>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>Products will be marked with multipicklist field GTS Location (GTS Poland, GTS Slovakia etc. ) mainly to separate Products for SK and other countries</description>
        <inlineHelpText>Please choose countires for this product</inlineHelpText>
        <label>GTS_Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <description>Unique number for communication with external systems eg. Billing.</description>
        <displayFormat>1{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Unique number for communication with external systems.</inlineHelpText>
        <label>Integration ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Invoice_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DAVO field - it is required in Billing: Indicated the order on which bundle will be printed on invoice document</description>
        <inlineHelpText>Indicated the order on which bundles will be printed on invoice document</inlineHelpText>
        <label>Invoice Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates a Bundle that can be sold and configured.</description>
        <inlineHelpText>Indicates a Bundle that can be sold and configured.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label_CZE__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Czech)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Eng__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_HUN__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Hungarian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_POL__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Polish)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_ROU__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Romanian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_SVK__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Slovak)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_AST__c</fullName>
        <description>Technical field which will remember the last related AST, which should be disconnected in Durian. The field will be automatically clean after succesfull synchronization</description>
        <inlineHelpText>Technical field for Billing SK.</inlineHelpText>
        <label>Last AST</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Bundles (Last AST)</relationshipLabel>
        <relationshipName>CProducts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Line of Business that categorizes the Bundle.</description>
        <inlineHelpText>Line of Business that categorizes the Bundle.</inlineHelpText>
        <label>Line of Business</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>CProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the definition has been modified or not.</description>
        <inlineHelpText>Technical field; Specifies if the definition has been modified or not.</inlineHelpText>
        <label>Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node_A_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Address Node A is required on request for this product</description>
        <inlineHelpText>Check if Address Node A is required on request for this product</inlineHelpText>
        <label>Node A Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node_B_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Address Node B is required on request for this product</description>
        <inlineHelpText>Check if Address Node B is required on request for this product</inlineHelpText>
        <label>Node B Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Extranet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value indicates if opportunities for this bundle can be created in Extranet.</description>
        <inlineHelpText>Value indicates if opportunities for this bundle can be created in Extranet.</inlineHelpText>
        <label>Opportunity Extranet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_AST__c</fullName>
        <description>Technical field, which stores the previously assigned AST</description>
        <inlineHelpText>Technical field for Billing SK</inlineHelpText>
        <label>Previous AST</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>Assigned Product Code</description>
        <inlineHelpText>Assigned Product Code</inlineHelpText>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Relation to Main Product.</description>
        <inlineHelpText>Relation to Main Product.</inlineHelpText>
        <label>Main Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (custom)</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product available for Retail</description>
        <inlineHelpText>Product available for Retail</inlineHelpText>
        <label>Retail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronization_Log__c</fullName>
        <description>Technical field that contains log messages for synchronization with external systems.</description>
        <inlineHelpText>Technical field that contains log messages for synchronization with external systems.</inlineHelpText>
        <label>Synchronization Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synchronization_in_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field used for synchronization with external systems.</description>
        <inlineHelpText>Technical field used for synchronization with external systems.</inlineHelpText>
        <label>Synchronization in Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the product definition has been send to external systems or not;</description>
        <inlineHelpText>Specifies whether the product definition has been send to external systems or not;</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>Validity date until which Bundle can be sold.</description>
        <inlineHelpText>Validity date until  which Bundle can be sold.</inlineHelpText>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_for_Contract__c</fullName>
        <description>Selected Type Of Service will be presented on printed Contract</description>
        <inlineHelpText>Selected Type Of Service will be presented on printed Contract</inlineHelpText>
        <label>Type of Service for Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Voice-Public Telephone Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Access-Connection to Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased Line-Lease of Data Circuits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP VPN-Virtual Private Data Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Phone-Supp. Telephone Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Cost-Supp. Telephone Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <description>Tehcnical field used for validation of name field&apos;s uniqueness..</description>
        <inlineHelpText>Tehcnical field.</inlineHelpText>
        <label>UniqueName</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wholesale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product available for Wholesale</description>
        <inlineHelpText>Product available for Wholesale</inlineHelpText>
        <label>Wholesale</label>
        <type>Checkbox</type>
    </fields>
    <label>Bundle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Integration_ID__c</columns>
        <columns>Product__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Label_Eng__c</columns>
        <columns>Label_SVK__c</columns>
        <columns>Synchronized__c</columns>
        <columns>Created_in_Extranet__c</columns>
        <columns>IsActive__c</columns>
        <columns>Configuration_Frozen__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GTS_SK_Bundles</fullName>
        <columns>NAME</columns>
        <columns>Integration_ID__c</columns>
        <columns>Product__c</columns>
        <columns>Label_Eng__c</columns>
        <columns>Label_SVK__c</columns>
        <columns>IsActive__c</columns>
        <columns>Synchronized__c</columns>
        <columns>Created_in_Extranet__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>includes</operation>
            <value>GTS Slovakia</value>
        </filters>
        <label>GTS_SK Bundles</label>
    </listViews>
    <listViews>
        <fullName>HU_Bundles</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>IsActive__c</columns>
        <columns>Synchronized__c</columns>
        <columns>Created_in_Billing__c</columns>
        <columns>Configuration_Frozen__c</columns>
        <columns>GTS_Location__c</columns>
        <columns>Integration_ID__c</columns>
        <columns>Label_Eng__c</columns>
        <columns>Label_HUN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>includes</operation>
            <value>GTS Hungary</value>
        </filters>
        <label>HU Bundles</label>
    </listViews>
    <listViews>
        <fullName>HU_Bundles_not_synchronized</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Product__c</columns>
        <columns>Synchronized__c</columns>
        <columns>Label_Eng__c</columns>
        <columns>Label_HUN__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>includes</operation>
            <value>GTS Hungary</value>
        </filters>
        <filters>
            <field>Synchronized__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>HU Bundles not synchronized</label>
    </listViews>
    <listViews>
        <fullName>HU_Migration</fullName>
        <columns>NAME</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Family__c</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <columns>To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>HU_Migration</value>
        </filters>
        <label>HU_Migration</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I20000000H94ZEAS_00N20000002767ZEAQ</fullName>
        <active>true</active>
        <field>Migration_Order__c.CTarget_Bundle__c</field>
        <filterItems>
            <field>CProduct__c.IsActive__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Migration Order_Target Bundle</name>
    </namedFilters>
    <pluralLabel>Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>From_Date_Check</fullName>
        <active>true</active>
        <description>Checks From Date against To Date</description>
        <errorConditionFormula>IF(AND(IF(ISNULL(To_Date__c), false, true), From_Date__c &gt; To_Date__c), true, false)</errorConditionFormula>
        <errorDisplayField>From_Date__c</errorDisplayField>
        <errorMessage>From Date can not be a later date than To Date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>To_Date_Check</fullName>
        <active>true</active>
        <description>Checks To Date against From Date</description>
        <errorConditionFormula>IF(AND(IF(ISNULL(From_Date__c), false, true), From_Date__c &gt; To_Date__c), true, false)</errorConditionFormula>
        <errorDisplayField>To_Date__c</errorDisplayField>
        <errorMessage>To Date can not be an earlier date than From Date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>setLocationLabel</fullName>
        <active>false</active>
        <description>Rule checks current User&apos;s GTSLocation and sets proper Label as Req</description>
        <errorConditionFormula>OR(
IF(ISPICKVAL($User.GTS_Location__c, &apos;GTS Czech Rep&apos;) &amp;&amp; Label_CZE__c = &apos;&apos;, true, false)
)</errorConditionFormula>
        <errorDisplayField>Label_CZE__c</errorDisplayField>
        <errorMessage>Please fill Label (Czech) field.</errorMessage>
    </validationRules>
</CustomObject>